# presentation-2025-08-07-jsm-querychat

./: .gitignore  README.md  alabama_birds_demo.csv  app.py  eval.py  presentation-2025-08-07-jsm-querychat.key  prompt.md  pyproject.toml  query.py  shared.py
docs/assets/: header.json  header.jsonp
docs/assets/04411249-8AF0-4EB4-B097-AFB5D13C0FCF/: 04411249-8AF0-4EB4-B097-AFB5D13C0FCF.json  04411249-8AF0-4EB4-B097-AFB5D13C0FCF.jsonp
docs/assets/10AEEF88-9BE7-467C-85AF-D737F351D6C4/: 10AEEF88-9BE7-467C-85AF-D737F351D6C4.json  10AEEF88-9BE7-467C-85AF-D737F351D6C4.jsonp
docs/assets/11263E3B-5238-4BD3-9229-3471CF8DF38A/: 11263E3B-5238-4BD3-9229-3471CF8DF38A.json  11263E3B-5238-4BD3-9229-3471CF8DF38A.jsonp
docs/assets/270911C4-4EA2-4CF5-9207-CB9C45DC0E90/: 270911C4-4EA2-4CF5-9207-CB9C45DC0E90.json  270911C4-4EA2-4CF5-9207-CB9C45DC0E90.jsonp
docs/assets/2E99D4DE-CE14-46E0-9288-D4ECDD406B0D/: 2E99D4DE-CE14-46E0-9288-D4ECDD406B0D.json  2E99D4DE-CE14-46E0-9288-D4ECDD406B0D.jsonp
docs/assets/38130BC8-FB50-445D-ABE0-37FA2151AEA9/: 38130BC8-FB50-445D-ABE0-37FA2151AEA9.json  38130BC8-FB50-445D-ABE0-37FA2151AEA9.jsonp
docs/assets/3A12A9B4-F4F7-4EF4-B7BC-E93558F95A5A/: 3A12A9B4-F4F7-4EF4-B7BC-E93558F95A5A.json  3A12A9B4-F4F7-4EF4-B7BC-E93558F95A5A.jsonp
docs/assets/4AB7F9FE-CB35-4C1D-AA86-BBF95F3DA7DD/: 4AB7F9FE-CB35-4C1D-AA86-BBF95F3DA7DD.json  4AB7F9FE-CB35-4C1D-AA86-BBF95F3DA7DD.jsonp
docs/assets/4E5568C8-4441-463F-8EEA-2E462EFE5862/: 4E5568C8-4441-463F-8EEA-2E462EFE5862.json  (+1 more)
eval-datasets/: query_db.csv  update_dashboard.csv
(+38 files in other folders)
