[project]
name = "querychat-jsm-2025"
version = "0.1.0"
description = "Example for talk"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.57.1",
    "chatlas>=0.9.0",
    "duckdb>=1.3.2",
    "faicons>=0.2.2",
    "inspect-ai>=0.3.112",
    "kaleido>=1.0.0",
    "openai>=1.93.2",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "python-dotenv>=1.1.1",
    "ridgeplot>=0.3.2",
    "shiny>=1.3.0",
    "shinywidgets>=0.6.2",
]
